fix bug of transfer

--- a/requirements.txt
+++ b/requirements.txt
@@ -135,4 +135,8 @@ yarl==1.8.2
 zipp==3.8.0
 h5py
 torchmetrics==0.8.0
+lightning-bolts==0.6.0.post1
+lightning-lite==1.8.0
+lightning-utilities==0.3.0
+pytorch-lightning==1.8.0
 
